@@ -220,10 +220,13 @@ foreach my $set (@{$state->{transaction} || []}) {
 		urpm::install::options($urpm),
 		test => $test,
 		verbose => $options{verbose},
+		script_fd => $urpm->{options}{script_fd},
 		oldpackage => $state->{oldpackage},
 		justdb => $options{justdb},
 		replacepkgs => $options{replacepkgs},
+		callback_close_helper => $callbacks->{close_helper},
 		callback_inst => $callbacks->{inst},
+		callback_open_helper => $callbacks->{open_helper},
 		callback_trans => $callbacks->{trans},
 		callback_report_uninst => $callbacks->{callback_report_uninst},
 		raw_message => 1,
