@@ -1,5 +1,6 @@
 - drop support for /etc/urpmi/media.d/*.cfg
   (was partially broken, non documented and hopefully unused)
+- add more callbacks for installer
 - fix reading descriptions with --env=
 - only load LDAP binding if needed (saves a couple MB in rpmdrake)
 - gurpmi:
